--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Jiajun Tang (唐嘉骏)"
   avatar           : "Profile.png"
-  bio              : "undergraduate student in the School of Literature and Journalism, Central South University."
+  bio              : "Communication & Media Study, Information Science"
   location         : "Changsha, China"
   employer         :
   pubmed           : 
@@ -37,7 +37,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : # e.g., "github username"
+  github           : "JIAJUN-TANG"
   google_plus      :
   keybase          :
   instagram        :
