--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
     url: "/#-educations"
 
   - title: "Student Works"
-    url: "/#-Student-Works"
+    url: "/#-student-works"
 
   - title: "Internships"
     url: "/#-internships"
