--- a/_config.yml
+++ b/_config.yml
@@ -23,12 +23,12 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Chen Yifeng (陈奕丰)"
   avatar           : ""
-  bio              : "Communication & Media Study, Information Science"
-  location         : "Changsha, China"
+  bio              : "Media & Communication, Information Science"
+  location         : "Shanghai, China"
   employer         :
   pubmed           : 
   googlescholar    : # "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
-  email            : "cyf_publisher@163.com"
+  email            : "chenyifeng@sjtu.edu.cn"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
