--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "About Chen Yifeng"
-description              : "Chen Yifeng's Personal Homepage. "
+description              : "陈奕丰的个人主页 "
 repository               : "Chen-Yifeng/Chen-Yifeng.github.io"
 google_scholar_stats_use_cdn : false
 
@@ -21,10 +21,10 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Chen Yifeng (陈奕丰)"
-  avatar           : ""
-  bio              : "Media & Communication, Information Science"
-  location         : "Shanghai, China"
+  name             : "陈奕丰（Chen Yifeng）"
+  avatar           : "images/apple-touch-icon.png"
+  bio              : "国际传播与计算传播"
+  location         : "上海，中国"
   employer         :
   pubmed           : 
   googlescholar    : # "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
