--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "陈奕丰<br><span style="font-size:smaller;">上海交通大学媒体与传播学院博士研究生</span>"
+  name             : "陈奕丰"
   avatar           : "images/apple-touch-icon.png"
-  bio              : "International Communication & Computational Communication"
+  bio              : "国际传播 & 计算传播"
   location         : "Shanghai China"
   employer         :
   pubmed           : 
