--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "带着好奇探索世界"
-description              : 
+description              : ""
 repository               : "Chen-Yifeng/Chen-Yifeng.github.io"
 google_scholar_stats_use_cdn : false
 
