--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "陈奕丰"
-  avatar           : "images/avatar.JPG"
+  avatar           : "images/avatar.jpg"
   bio              : "国际传播 & 计算传播"
   location         : "Shanghai China"
   employer         :
