--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "images/avatar.jpg"
   bio              : "国际传播 & 计算传播"
   location         : "Shanghai China"
-  employer         :
+  employer         : "Shanghai JIao Tong University"
   pubmed           : 
   googlescholar    : # "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
   email            : "chenyifeng@sjtu.edu.cn"
